Updated version and added connectivity alerts.

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="5dp"
 	    android:maxLines="3"
 	    android:text=""
-	    android:inputType="textMultiLine|textAutoCorrect"
+	    android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
 	    android:gravity="top">
 	    <requestFocus />
     </EditText>
