--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <style name="Default.Theme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
-        
     </style>
  
     <style name="Theme.Styled" parent="Theme.Sherlock.Light.DarkActionBar">
@@ -9,7 +8,7 @@
         <item name="android:actionBarStyle">@style/Widget.Styled.ActionBar</item>
     </style>
     <style name="Widget.Styled.ActionBar" parent="Widget.Sherlock.Light.ActionBar.Solid.Inverse">
-        <item name="background">#000000</item>
-        <item name="android:background">#000000</item>
+        <item name="background">@color/black</item>
+        <item name="android:background">@color/black</item>
     </style>
 </resources>
